fix too wide screen

--- a/rhkt-frontend/src/app/components/dashboard/dashboard.component.css
+++ b/rhkt-frontend/src/app/components/dashboard/dashboard.component.css
@@ -7,7 +7,7 @@
 
 .title-wrapper {
     text-align: center;
-    margin-left: 20px;
+    padding-left: 20px;
     width: 100%;
     display: flex;
     margin-bottom: 20px;
